--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "start": "webpack-dev-server --content-base build --port 3000"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "webpack": "^1.13.3"
+        "webpack": "^1.13.3",
+        "webpack-dev-server": "^1.16.2"
     }
 }
