--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-survivejs-kanban": "^0.3.3",
     "css-loader": "^0.26.0",
     "npm-install-webpack-plugin": "^4.0.4",
     "style-loader": "^0.13.1",
