--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-merge": "^0.19.0"
   },
   "dependencies": {
+    "node-uuid": "^1.4.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
