--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-survivejs-kanban": "^0.3.3",
+    "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.0",
+    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-template": "^5.4.1",
     "npm-install-webpack-plugin": "^4.0.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
