--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-survivejs-kanban": "^0.3.3",
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
     "html-webpack-template": "^5.4.1",
     "npm-install-webpack-plugin": "^4.0.4",
