--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "deploy": "gh-pages -d build",
         "stats": "webpack --profile --json > stats.json",
         "build": "webpack",
         "start": "webpack-dev-server --port 3000"
@@ -21,6 +22,7 @@
         "clean-webpack-plugin": "^0.1.14",
         "css-loader": "^0.26.0",
         "extract-text-webpack-plugin": "^1.0.1",
+        "gh-pages": "^0.12.0",
         "html-webpack-plugin": "^2.24.1",
         "html-webpack-template": "^5.4.1",
         "npm-install-webpack-plugin": "^4.0.4",
