--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "deploy": "gh-pages -d build",
         "stats": "webpack --profile --json > stats.json",
         "build": "webpack",
-        "start": "webpack-dev-server --port 3000"
+        "start": "webpack-dev-server --port 3000",
+        "test": "karma start",
+        "tdd": "karma start --auto-watch --no-single-run"
     },
     "keywords": [],
     "author": "",
@@ -25,7 +27,19 @@
         "gh-pages": "^0.12.0",
         "html-webpack-plugin": "^2.24.1",
         "html-webpack-template": "^5.4.1",
+        "isparta-instrumenter-loader": "^1.0.1",
+        "karma": "^1.3.0",
+        "karma-coverage": "^1.1.1",
+        "karma-mocha": "^1.3.0",
+        "karma-phantomjs-launcher": "^1.0.2",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-spec-reporter": "0.0.26",
+        "karma-webpack": "^1.8.0",
+        "mocha": "^3.2.0",
         "npm-install-webpack-plugin": "^4.0.4",
+        "phantomjs-polyfill": "0.0.2",
+        "phantomjs-prebuilt": "^2.1.13",
+        "react-addons-test-utils": "^15.4.1",
         "style-loader": "^0.13.1",
         "webpack": "^1.13.3",
         "webpack-dev-server": "^1.16.2",
