--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-    "name": "kanban_app",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "deploy": "gh-pages -d build",
-        "stats": "webpack --profile --json > stats.json",
-        "build": "webpack",
-        "start": "webpack-dev-server --port 3000",
-        "test": "karma start",
-        "tdd": "karma start --auto-watch --no-single-run"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.18.2",
-        "babel-loader": "^6.2.8",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-preset-react": "^6.16.0",
-        "babel-preset-react-hmre": "^1.1.1",
-        "babel-preset-survivejs-kanban": "^0.3.3",
-        "clean-webpack-plugin": "^0.1.14",
-        "css-loader": "^0.26.0",
-        "extract-text-webpack-plugin": "^1.0.1",
-        "gh-pages": "^0.12.0",
-        "html-webpack-plugin": "^2.24.1",
-        "html-webpack-template": "^5.4.1",
-        "isparta-instrumenter-loader": "^1.0.1",
-        "karma": "^1.3.0",
-        "karma-coverage": "^1.1.1",
-        "karma-mocha": "^1.3.0",
-        "karma-phantomjs-launcher": "^1.0.2",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "0.0.26",
-        "karma-webpack": "^1.8.0",
-        "mocha": "^3.2.0",
-        "npm-install-webpack-plugin": "^4.0.4",
-        "phantomjs-polyfill": "0.0.2",
-        "phantomjs-prebuilt": "^2.1.13",
-        "react-addons-test-utils": "^15.4.1",
-        "style-loader": "^0.13.1",
-        "webpack": "^1.13.3",
-        "webpack-dev-server": "^1.16.2",
-        "webpack-merge": "^0.19.0"
-    },
-    "dependencies": {
-        "alt": "^0.18.6",
-        "alt-container": "^1.0.2",
-        "alt-utils": "^1.0.0",
-        "node-uuid": "^1.4.7",
-        "react": "^15.4.1",
-        "react-addons-update": "^15.4.1",
-        "react-dnd": "^2.1.4",
-        "react-dnd-html5-backend": "^2.1.2",
-        "react-dom": "^15.4.1"
-    }
+  "name": "kanban_app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "deploy": "gh-pages -d build",
+    "stats": "webpack --profile --json > stats.json",
+    "build": "webpack",
+    "start": "webpack-dev-server --port 3000",
+    "test": "karma start",
+    "tdd": "karma start --auto-watch --no-single-run"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-survivejs-kanban": "^0.3.3",
+    "clean-webpack-plugin": "^0.1.14",
+    "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "gh-pages": "^0.12.0",
+    "html-webpack-plugin": "^2.24.1",
+    "html-webpack-template": "^5.4.1",
+    "isparta-instrumenter-loader": "^1.0.1",
+    "karma": "^1.3.0",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.2.0",
+    "npm-install-webpack-plugin": "^4.0.4",
+    "phantomjs-polyfill": "0.0.2",
+    "phantomjs-prebuilt": "^2.1.13",
+    "react-addons-test-utils": "^15.4.1",
+    "react-dnd-test-backend": "^1.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^0.19.0"
+  },
+  "dependencies": {
+    "alt": "^0.18.6",
+    "alt-container": "^1.0.2",
+    "alt-utils": "^1.0.0",
+    "node-uuid": "^1.4.7",
+    "react": "^15.4.1",
+    "react-addons-update": "^15.4.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "^15.4.1"
+  }
 }
