--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack",
     "start": "webpack-dev-server --port 3000",
     "test": "karma start",
-    "tdd": "karma start --auto-watch --no-single-run"
+    "tdd": "karma start --auto-watch --no-single-run",
+    "flow": "flow check"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "flow-bin": "^0.36.0",
     "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.24.1",
     "html-webpack-template": "^5.4.1",
